fixed scrollbar and nav whitespace

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 body {
     font-size: 1.5rem;
     line-height: 1.5;
+    background: var(--color-white);
 }
 
 a {
@@ -79,6 +80,7 @@ a {
 
 .navbar__logo {
     flex: 1 1 20%;
+    align-self: center;
     padding: 0.8rem 2.5rem;
     font-family: "Aclonica", sans-serif;
     font-size: 2.5rem;
@@ -118,10 +120,8 @@ a {
     color: var(--color-dark-grey);
 }
 
-/* WHITESPACE */
-
-.whitespace {
-    height: 7.5rem;
+#header {
+    margin-top: 8rem;
 }
 
 /* SHOWCASE */
